1.通过socketd打通管理端和租户端的交互 2.socketd事件分发 3.通过redismq发布通知 字典修改事件 同时租户段本地字典缓存更新 4.字典数据页字典标签添加国际化